# rezonator2

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  make_runnable.mac  prepare.bat  prepare.sh  requirements.txt  rezonator.pro  vcpkg-configuration.json  vcpkg.json
calc/: BeamCalculator.py  ElemBrewsterCrystal.py  ElemBrewsterPlate.py  ElemGauss.py  ElemGrinLens.py  ElemPlate.py  ElemThickLens.py  ElemTiltedCrystal.py  ElemTiltedPlate.py  ElemTiltedPlate.sce  Elements.py  GaussCalculator.md  GaussCalculator.py  Matrix.py  PumpCalculator.py  README.md  RoundTripCalculator.py  ThickLens.py  complex_stability.ipynb  elems_matrices.py  grin_focus_assessment .ipynb  grin_focus_assessment.ipynb  misalign.py  mult_matrix.py  rezonator.py
docs/: add-plot-func.md  build.md  code-style.md  file-format-she.md  latex-symbols.md  load-local-libs-on-macos.md  prepare-deps-win.md  schema-format-she.md  schema-format-variants.md
help/: .editorconfig  README.md  about.html  about.txt  adjust.rst  app_settings.rst  app_settings_behavior.rst  app_settings_export.rst  app_settings_intf.rst  app_settings_lines.rst  calc_formula.rst  calc_gauss.html  calc_gauss.rst  calc_grin.html  calc_grin.rst  calc_lens.rst  calculators.rst  catalog.rst  conf.py  custom_func_lib.rst  custom_funcs.rst  custom_params.rst  custom_plot.rst  custom_script.rst  custom_table.rst  elem_library.rst  elem_matrs.rst  elem_opers.rst  elem_opers_add_adjuster.rst  elem_opers_append.rst  elem_opers_copy.rst  elem_opers_delete.rst  elem_opers_insert_into.rst  elem_opers_insert_into_range.rst  elem_opers_lock.rst  elem_opers_matrix.rst  elem_opers_merge.rst  elem_opers_move.rst  elem_opers_paste.rst  elem_opers_props.rst  (+83 more)
help/formulas/: conf.py  hyper_gauss.rst  make.bat
help/img_src/: func_beam_var.rez  func_caustic.rez  func_caustic_mb.rez  func_caustic_mr.rez  func_stabmap.rez
help/matrix/: ElemAxiconLens.html  ElemAxiconLens.odf  ElemAxiconLens.rst  ElemAxiconLens.xcf  ElemAxiconMirror.html  ElemAxiconMirror.odf  ElemAxiconMirror.rst  ElemAxiconMirror.xcf  ElemBrewsterCrystal.html  ElemBrewsterCrystal.rst  ElemBrewsterCrystal.xcf  ElemBrewsterInterface.html  ElemBrewsterInterface.odf  ElemBrewsterInterface.rst  ElemBrewsterPlate.html  ElemBrewsterPlate.rst  ElemCurveMirror.html  ElemCurveMirror.rst  ElemCurveMirror.xcf  ElemEmptyRange.html  ElemEmptyRange.rst  ElemFlatMirror.html  ElemFlatMirror.odf  ElemFlatMirror.rst  ElemGaussAperture.html  ElemGaussAperture.rst  ElemGaussApertureLens.html  ElemGaussApertureLens.rst  ElemGaussDuct.html  ElemGaussDuctMedium.html  ElemGaussDuctMedium.rst  ElemGaussDuctSlab.html  ElemGaussDuctSlab.rst  ElemGrinLens.html  ElemGrinLens.rst  ElemGrinMedium.html  ElemGrinMedium.rst  ElemMatrix.rst  ElemMediaRange.html  ElemMediaRange.rst  (+33 more)
help/styles/: custom.css  pygments.css
img/: README.md  svgcleaner.sh
img/icon/: main_2.icns  make_icon_mac.sh
img/matrices/: ElemBrewsterPlate.xcf  ElemCurveMirror.odf  ElemGrinLens.odf  ElemGrinLens.xcf  ElemPlate.xcf  ElemThinLens.odf  ElemTiltedCrystal.odf  ElemTiltedCrystal.xcf  ElemTiltedPlate.odf
img/matrix/: ElemBrewsterCrystal.odf  ElemBrewsterInterface.odf  ElemBrewsterPlate.odf  ElemEmptyRange.odf  ElemEmptyRange.xcf  ElemFlatMirror.xcf  ElemMediaRange.xcf  ElemNormalInterface.odf  ElemPlate.odf  ElemSphericalInterface.odf  ElemThickLens.odf  ElemThinCylinderLensS.xcf  ElemThinCylinderLensT.xcf  ElemTiltedInterface.odf  README.md
install/win/: rezonator.iss
libs/: CMakeLists.txt  lua.pri
libs/qcustomplot/: qcpcursor.cpp  qcpcursor.h  qcustomplot.cpp  qcustomplot.cpp.patch  qcustomplot.h  qcustomplot.h.patch
release/: README.md  helpers.py  history.json  make_package.py  make_release.py  make_version.py  prepare_python.py  rezonator.desktop  update_version.py  version.pri  version.rc  version.rc.in  version.rc.template  version.txt
scripts/: build_release.bat  build_release.sh  build_release_win.bat  helpers.sh  make_AppImage.sh  make_package_linux.sh  make_package_macos.sh  make_package_win.bat  make_release_linux.sh  prepare_deps.bat  prepare_deps.sh
src/: AdjustmentWindow.cpp  AdjustmentWindow.h  AppSettings.cpp  AppSettings.h  AppSettingsDialog.cpp  AppSettingsDialog.h  Appearance.cpp  Appearance.h  BeamCalculatorWindow.cpp  BeamCalculatorWindow.h  CalcManager.cpp  CalcManager.h  CalculatorWindow.cpp  CalculatorWindow.h  CharMapWindow.cpp  CharMapWindow.h  CommonData.cpp  CommonData.h  ConfigDialog.cpp  ConfigDialog.h  CustomElemsManager.cpp  CustomElemsManager.h  CustomElemsWindow.cpp  CustomElemsWindow.h  CustomPrefs.cpp  CustomPrefs.h  ElemFormulaWindow.cpp  ElemFormulaWindow.h  ElementPropsDialog.cpp  ElementPropsDialog.h  ElementsCatalogDialog.cpp  ElementsCatalogDialog.h  GaussCalculatorWindow.cpp  GaussCalculatorWindow.h  GrinLensWindow.cpp  GrinLensWindow.h  HelpSystem.cpp  HelpSystem.h  InfoFuncWindow.cpp  InfoFuncWindow.h  (+51 more)
src/app/: AppSettings.cpp  AppSettings.h  Appearance.cpp  Appearance.h  CalcManager.cpp  CalcManager.h  CommonData.cpp  CommonData.h  CustomElemsManager.cpp  CustomFuncsLib.cpp  CustomFuncsLib.h  CustomPrefs.h  HelpSystem.cpp  HelpSystem.h  MessageBus.cpp  MessageBus.h  PersistentState.cpp  PersistentState.h  ProjectOperations.cpp  ProjectOperations.h
src/core/: Beam.cpp  Beam.h  CommonTypes.cpp  CommonTypes.h  Complex.cpp  Complex.h  Element.cpp  Element.h  ElementFilter.cpp  ElementFilter.h  ElementFormula.cpp  ElementFormula.h  Elements.cpp  Elements.h  ElementsCatalog.cpp  ElementsCatalog.h  Format.cpp  Format.h  FormatSchema.cpp  FormatSchema.h  Formula.cpp  Formula.h  LuaHelper.cpp  LuaHelper.h  Math.cpp  Math.h  Parameters.cpp  Parameters.h  Perf.cpp  Perf.h  Protocol.cpp  Protocol.h  Pump.cpp  Pump.h  PyClassElement.h  PyClassMatrix.h  PyClassMatrix3.h  PyClassRayVector.h  PyClassRoundTrip.h  PyHelper.cpp  (+19 more)
src/funcs/: AbcdBeamCalculator.cpp  AbcdBeamCalculator.h  BeamCalculator.cpp  BeamCalculator.h  BeamCalculator1.cpp  BeamCalculator1.h  BeamOverStabFunction.cpp  BeamOverStabFunction.h  (+86 more)
tips/: .gitignore  several_pumps.rez  tips.json
uml/: diagram.drawio
(+346 files in other folders)
